bad/add_invalid_types_void_void.example_compiler_output
ERROR
[1mbad/add_invalid_types_void_void.lat:5:8: [1;31merror: [0;1maddition is defined only for int values or string values, not `void` and `void`[m
	foo() + foo();
	      [1;32m^[m
